<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.vteam.foodfriends.ui.login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundhint" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/logo"
        android:elevation="20dp"
        android:layout_above="@id/layout_input"/>


    <LinearLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="10dp"
                android:hint="@string/email_title"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textSize="21sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/password_title"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textSize="21sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layout_input"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_login_ripple"
        android:elevation="10dp"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/bt_login"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_register_ripple"
        android:elevation="10dp"
        android:text="@string/register_title"
        android:textColor="@color/register"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/forgot_password_title"
        android:textColor="@color/white" />

    <include
        android:id="@+id/loading_view"
        layout="@layout/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
