<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vteam.foodfriends.ui.write_comment.WriteCommentActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/cancel_comment"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white"
                    android:background="@color/white_transparent"/>
                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/send_comment"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/white"
                    android:background="@color/white_transparent"/>

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.RatingBar.Indicator"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/rest_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_below="@id/rating">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rest_name_example"
                android:textColor="@color/btnSignIn"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rest_location_example"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <View
            android:id="@+id/seperate1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rest_layout"
            android:background="@color/black"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="@color/bg_timer"
            android:layout_below="@id/seperate1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:hint="@string/title_comment_hint"
                android:inputType="text"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17sp"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/seperate2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/title_layout"
            android:background="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/bg_timer"
            android:layout_below="@id/seperate2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_content"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:drawablePadding="10dp"
                android:hint="@string/content_comment_hint"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17sp"/>
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
