<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_detail_food"
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_detail_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"
            android:fitsSystemWindows="true"
            app:titleEnabled="false">

            <RelativeLayout
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/breakfast"
                    app:layout_collapseMode="pin" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/transparent_layer"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">
                    <TextView
                        android:id="@+id/tv_rest_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/rest_name_example"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:singleLine="true" />

                    <TextView
                        android:id="@+id/tv_rest_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rest_location_example"
                        android:textColor="@color/color_location"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:id="@+id/tv_rest_open_time_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rest_open_time_status_example"
                            android:textColor="@color/white"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tv_rest_open_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rest_open_time_example"
                            android:textColor="@color/white"
                            android:layout_toRightOf="@id/tv_rest_open_time_status"/>

                        <TextView
                            android:id="@+id/tv_rest_distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/rest_distance_example"
                            android:textColor="@color/white"/>

                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="16dp"
                        android:src="@drawable/ic_arrow_orange" />

                    <TextView
                        android:id="@+id/tv_appbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_appbar_title"
                        android:textColor="@color/bottom_plus_icon"
                        android:layout_toRightOf="@id/btn_back"
                        android:layout_toLeftOf="@id/btn_reserve2"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:alpha="0"
                        android:singleLine="true"
                        android:visibility="visible"/>

                    <Button
                        android:id="@+id/btn_reserve2"
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/bg_button_seat"
                        android:text="@string/reserve"
                        android:textColor="@color/white"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:visibility="visible"
                        android:alpha="0"/>

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScroolView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/reserve_layout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv_rating_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:textColor="@color/color_rating"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="@id/rest_rating"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/rest_rating" />

                <RatingBar
                    android:id="@+id/rest_rating"
                    style="@style/Base.Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rating="3"
                    app:layout_constraintLeft_toRightOf="@id/tv_rating_number" />

                <TextView
                    android:id="@+id/tv_total_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rest_total_comment_example"
                    android:textColor="@color/color_rating"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rest_rating" />

                <Button
                    android:id="@+id/btn_reserve1"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_button_seat"
                    android:text="@string/reserve"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_gallery_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:padding="10dp"
                    android:textStyle="bold"/>

                <GridLayout
                    android:id="@+id/gallery_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_gallery_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:columnCount="2"
                    android:rowCount="1">

                    <ImageView
                        android:id="@+id/main_image"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/breakfast"
                        android:scaleType="centerCrop"/>

                    <GridLayout
                        android:id="@+id/gallery_detail_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="2"
                        android:rowCount="2">

                        <ImageView
                            android:id="@+id/detail_image_1"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/breakfast"
                            android:scaleType="centerCrop"/>

                        <ImageView
                            android:id="@+id/detail_image_2"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/breakfast"
                            android:scaleType="centerCrop"/>

                        <ImageView
                            android:id="@+id/detail_image_3"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/breakfast"
                            android:scaleType="centerCrop"/>

                        <ImageView
                            android:id="@+id/detail_image_4"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/breakfast"
                            android:scaleType="centerCrop"/>

                    </GridLayout>

                </GridLayout>

            </android.support.constraint.ConstraintLayout>



            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_ranking_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ranking_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:padding="10dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/ranking_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_ranking_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:padding="10dp"
                    android:text="@string/ranking_text"/>

                <RatingBar
                    android:id="@+id/user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:stepSize="1"
                    android:numStars="5"
                    style="@style/Base.Widget.AppCompat.RatingBar.Indicator"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ranking_text"
                    app:layout_constraintBottom_toBottomOf="@id/ranking_text"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layoutManager="LinearLayoutManager"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ranking_text"/>
                
                <TextView
                    android:id="@+id/tv_write_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_comment"
                    android:textSize="20sp"
                    android:textColor="@color/bottom_plus_icon"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_comment" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>